# CrewAgent

./: .env.example  .gitignore  CLAUDE.md  Guideline.md  README.md  pyproject.toml  resume
docs/: gap_report.md
src/pentest_crew/: crew.py  llm_mode.py  main.py  pipeline_gates.py
src/pentest_crew/config/: agents.yaml  tasks.yaml  tasks.yaml.bak
src/pentest_crew/tools/: __init__.py  auth_tools.py  autorize_tools.py  burp_collaborator_tools.py  burp_config_tools.py  burp_mcp_client.py  burp_output_sanitizer.py  burp_proxy_tools.py  burp_request_tools.py  business_logic_tools.py  cache_poisoning_tools.py  command_injection_tools.py  coverage_gap_tools.py  crlf_injection_tools.py  deserialization_tools.py  dom_xss_tools.py  evidence_capture_tools.py  exploit_chain_tools.py  exploitation_tools.py  fp_tracker_tools.py  fuzzing_tools.py  graphql_security_tools.py  jwt_security_tools.py  ldap_injection_tools.py  postmessage_security_tools.py  prototype_pollution_tools.py  redirect_and_cors_tools.py  report_filter_tools.py  request_smuggling_tools.py  s3_bucket_tools.py  scope_discovery_tools.py  sql_injection_tools.py  ssrf_tools.py  stateful_testing_tools.py  websocket_security_tools.py  xss_bypass_tools.py  xxe_tools.py
tests/: __init__.py  test_advanced_security_tool_regressions.py  test_autorize_tools.py  test_burp_request_tools.py  test_burp_safe_outputs.py  test_burp_wrapper_regressions.py  test_crew_smoke.py  test_deserialization_tools.py  test_exploit_chains.py  test_improvements.py  test_main.py  test_pipeline_gates.py  test_report_filter.py
