[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pentest_crew"
version = "1.0.0"
description = "AI-powered Web Application Penetration Testing Crew using Burp Suite MCP"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.86.0",
    "crewai-tools>=0.33.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[project.scripts]
pentest_crew = "pentest_crew.main:run"

[tool.setuptools.packages.find]
where = ["src"]
