[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pentest_crew"
version = "1.0.0"
description = "AI-powered Web Application Penetration Testing Crew using Burp Suite MCP"
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[anthropic,google-genai]>=0.86.0",
    "crewai-tools>=0.33.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
pentest_crew = "pentest_crew.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
